# pheval-runner-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  config.yaml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/: __init__.py  cli.py  runner.py
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/post_process/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/prepare/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/run/: __init__.py
