[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.0"
description = "{{cookiecutter.project_name}}"
authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
license = "{{cookiecutter.license}}"
readme = "README.md"
requires-python = ">={{cookiecutter.min_python_version}}"

dependencies = [
    "click",
    "importlib-metadata>=8.2.0",
    "pheval>=0.7.0",
]

[dependency-groups]

dev = [
    "pytest>=8.3.2",
    "tox>=4.16.0",
    "pre-commit>=3.3.3",
    "ruff>=0.4.6",
]

docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.11",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.8.0",
    "pymdown-extensions>=9.9",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "mkdocs-click>=0.8.0",
    "griffe==0.38.1",
]

[project.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.__project_slug}}.cli:main"

[project.entry-points."pheval.plugins"]
{{cookiecutter.project_name}}_runner = "{{cookiecutter.__project_slug}}.runner:{{cookiecutter.runner_name}}"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
respect-gitignore = true

[tool.ruff.lint]
select = [
    "E", "W", "F", "B", "I", "N", "S", "C90", "PL", "RUF", "UP", "NPY"
]
ignore = [
    "E203", "S311", "S101", "S106", "S404", "S108", "S307", "S603", "S607", "S608",
    "B024", "B027", "N801", "N803", "N806", "N815", "E731", "C901", "B019",
    "PLR0913", "PLW0211"
]
fixable = ["ALL"]
unfixable = ["B"]

[tool.ruff.lint.mccabe]
max-complexity = 13

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }

[tool.hatch.build.targets.sdist]
include = ["src/{{cookiecutter.__project_slug}}"]

[tool.hatch.build.targets.wheel]
include = ["src/{{cookiecutter.__project_slug}}"]

[tool.hatch.build.targets.wheel.sources]
"src/{{cookiecutter.__project_slug}}" = "{{cookiecutter.__project_slug}}"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
